exports[`test cjs output 1`] = `

> cjs@1.0.0 test
> node index.cjs

Default export: {
  Evaluator: [Function: Evaluator],
  Parser: [Function: Parser],
  Tokenizer: [Function: Tokenizer],
  default: {
    parseRules: [Function: parseRules],
    findTargets: [Function: src_findTargets],
    executeCleanup: [Function: executeCleanup],
    tokenize: [Function: tokenizer_tokenize],
    parse: [Function: parser_parse],
    evaluate: [Function: evaluator_evaluate],
    executeRules: [Function: executeRules]
  },
  executeCleanup: [Function: executeCleanup],
  findTargets: [Function: src_findTargets],
  parseRules: [Function: parseRules]
}
Has parseRules: true
Has findTargets: true
Has executeCleanup: true
Parsed rules: [
  {
    "action": "delete",
    "target": "target",
    "condition": {
      "type": "predicate",
      "left": null,
      "right": null,
      "predicate": {
        "type": "exists",
        "location": "here",
        "pattern": "Cargo.toml",
        "negated": null
      }
    }
  }
]

✓ CJS module works correctly

`;

exports[`test esm output 1`] = `

> esm@1.0.0 test
> node index.mjs

Default export: {
  parseRules: [Function: parseRules],
  findTargets: [Function: src_findTargets],
  executeCleanup: [Function: executeCleanup],
  tokenize: [Function: tokenizer_tokenize],
  parse: [Function: parser_parse],
  evaluate: [Function: evaluator_evaluate],
  executeRules: [Function: executeRules]
}
Has parseRules: true
Has findTargets: true
Has executeCleanup: true
Parsed rules: [
  {
    "action": "delete",
    "target": "target",
    "condition": {
      "type": "predicate",
      "left": null,
      "right": null,
      "predicate": {
        "type": "exists",
        "location": "here",
        "pattern": "Cargo.toml",
        "negated": null
      }
    }
  }
]

✓ ESM module works correctly

`;
